<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>


    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>

    <string name="email">Email:</string>

    <string name="signInButton">Sign In</string>
    <string name="registerButton">Register</string>

    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>




</resources>